# Raytracing-In-One-Week

./: .gitignore  Box.cpp  Box.h  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  ColorSpace.cpp  ColorSpace.h  Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Emissive.cpp  Emissive.h  FastWrite.cpp  FastWrite.h  Filters.cpp  Filters.h  Glass.cpp  Glass.h  Ground.cpp  Ground.h  HitRec.cpp  HitRec.h  Image.cpp  Image.h  Lambertian.cpp  Lambertian.h  Light.cpp  Light.h  LinearFeedbackShift.cpp  LinearFeedbackShift.h  Material.h  Matrix3x3.cpp  Matrix3x3.h  Metal.cpp  Metal.h  Object.cpp  Object.h  (+49 more)
ext/: olcPixelGameEngine.h
ext/oof/: oof.h
ext/stb/: stb_image.h  stb_image_write.h
images/: log.txt  runTime.txt
render/debugSc/: log_color.txt  runTime.txt
renders/cornell/: cornell.blend  log_albedo.txt  log_color.txt  log_emission.txt  log_normal.txt  runTime.txt
renders/debugScene/: debug_denoiser.blend  denoiser.blend  log_albedo.txt  log_color.txt  log_emission.txt  log_normal.txt  runTime.txt
renders/full/: denoise.blend  final.blend  full_denoiser.blend  log_albedo.txt  log_color.txt  log_emission.txt  log_normal.txt  runTime.txt
renders/original/: denoiser.blend  log_albedo.txt  log_color.txt  log_emission.txt  log_normal.txt  original.blend  original_denoiser.blend  runTime.txt
renders/textured/: log_albedo.txt  log_color.txt  log_emission.txt  log_normal.txt  runTime.txt  textured.blend
src/: main.cpp
src/extended/: E_Pixel.cpp  E_Pixel.h
src/image/: Image.cpp  Image.h
src/managers/: MainManager.cpp  MainManager.h
src/maths/: Maths.cpp  Maths.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  Vector3D.cpp  Vector3D.h
src/misc/: ACES.cpp  ACES.h  BlueNoise.cpp  BlueNoise.h  ColorTools.cpp  ColorTools.h  Random.cpp  Random.h
src/other/: Log.cpp  Log.h
src/raytracing/: Camera.cpp  Camera.h  HitRec.cpp  HitRec.h  Ray.cpp  Ray.h  Raytracing.cpp  Raytracing.h  Settings.cpp  Settings.h
src/raytracing/materials/: Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Glass.cpp  Glass.h  Material.h  Metal.cpp  Metal.h  Unshaded.cpp  Unshaded.h
src/raytracing/objects/: Object.h  PointLight.cpp  PointLight.h  Sphere.cpp  Sphere.h
src/raytracing/scenes/: DebugScene.cpp  DebugScene.h  FullScene.cpp  FullScene.h  OriginalScene.cpp  OriginalScene.h  Scene.cpp  Scene.h
src/render/: PixelRender.cpp  PixelRender.h  Render.cpp  Render.h  Settings.cpp  Settings.h
src/render/raytracing/: Camera.cpp  Camera.h  HitRec.cpp  HitRec.h  Ray.cpp  Ray.h
src/utility/: BlueNoise.cpp  BlueNoise.h  Color.cpp  Color.h  Colour.cpp  Colour.h  ImageWrapper.cpp  ImageWrapper.h  Random.cpp  Random.h
src/wrapper/: Fastwrite.cpp  Fastwrite.h  Float.cpp  Float.h  HDR.cpp  HDR.h  Image.cpp  Image.h
